--- a/html/products.html
+++ b/html/products.html
@@ -193,7 +193,7 @@
         <h1 class="fw-light">Products</h1>
         <p class="lead text-body-secondary">FakeStoreApi can be used with any type of shopping project that needs products, carts, and users in JSON format..</p>
         <p>
-          <button class="btn btn-primary my-2">Load Products</button>
+          <button class="btn btn-primary my-2" id="LoadProducts">Load Products</button>
         </p>
       </div>
     </div>
@@ -354,6 +354,6 @@
   </div>
 </footer>
 <script src="https://getbootstrap.com/docs/5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
+<script src="./js/main.js"></script>
     </body>
 </html>
